tests/negative/test_mac_redef.orb
mac foo () {};

mac foo () {};

fnc main () () {};